added analytics and donate link

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>QWERTLE</title>
+    <script defer src="https://us.umami.is/script.js" data-website-id="16b65559-9c5e-4020-b568-5abfb7bb6dec"></script>
   </head>
   <body>
     <noscript>
